--- a/board/static/board/style.css
+++ b/board/static/board/style.css
@@ -1,6 +1,14 @@
 header h1 {
-background: url("top_image.jpg") left / auto 100% no-repeat, url("top_image.jpg") right / auto 100% no-repeat;
-
+background: url("top_image_2.jpg") left / auto 100% no-repeat, url("top_image_3.jpg") right / auto 100% no-repeat;
 }
+
+body {background: url("1619477565_20-phonoteka_org-p-svetlii-fon-biznes-21.jpg")}
 .root {
 font-size: larger;}
+
+img.main-image {
+width: 500рх;
+}
+img.additional-image {
+width: 100px;
+}
