--- a/board/templates/board/by_category.html
+++ b/board/templates/board/by_category.html
@@ -1,15 +1,45 @@
 {% extends 'layout/basic_2.html' %}
+{% load thumbnail %}
+{% load bootstrap4 %}
+{% load static %}
 {% block title %}Категории{% endblock %}
 
 {% block content %}
-<h2>Категория: {{ current_category.name }}</h2>
-
+<div class="d-flex justify-content-between">
+    <h2>Категория: {{ categories.name }}</h2>
+    <form class="col-md-auto form-inline">
+    {% bootstrap_form form show_label=False %}
+    {% bootstrap_button button_class='btn-outline-dark' content='Поиск' button_type='submit' %}
+    </form>
+</div>
 {% for bb in bbs %}
-    <div class="shadow-lg p-3 mb-5 bg-white rounded">
+    <div class="shadow-lg p-3 mb-5 bg-secondary text-light rounded">
+        <a class="text-white" href="{% url 'board:detail' bb.category.slug bb.slug %}">
         <h4>{{ bb.title }}</h4>
         <p>{{ bb.content }}</p>
-        <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
+        <h4>{{ bb.price }} rub.</h4>
+        </a>
+        {% if bb.image %}
+        <div class="d-flex flex-row-reverse">
+        <img  class="rounded" src="{% thumbnail bb.image 'default' %}">
+        </div>
+        {% endif %}
+        <p>Опубликовано: {{ bb.published|date:"d.m.Y H:i:s" }}</p>
     </div>
 {% endfor %}
+
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+      {% if page.has_previous %}
+        <li class="page-item"><a class="page-link bg-dark text-light" href="?page={{ page.previous_page_number }}">Previous</a></li>
+        <li class="page-item"><a class="page-link bg-dark text-light" href="?page={{ page.previous_page_number }}">{{ page.previous_page_number }}</a></li>
+        {% endif %}
+        <li class="page-item active"><a class="page-link bg-secondary text-light" href="#">{{ page.number }}</a></li>
+      {% if page.has_next %}
+        <li class="page-item "><a class="page-link bg-dark text-light" href="?page={{ page.next_page_number }}">{{ page.next_page_number }}</a></li>
+        <li class="page-item"><a class="page-link bg-dark text-light" href="?page={{ page.next_page_number }}">Next</a></li>
+      {% endif %}
+  </ul>
+</nav>
 {% endblock %}
 </html>
