--- a/board/templates/board/create.html
+++ b/board/templates/board/create.html
@@ -23,7 +23,7 @@
                 <a class="nav-link dropdown text-dark"
                 data-toggle="dropdown"
                 href="#" role="button" aria-haspopup="true"
-                aria-expanded="False">Профиль</а>
+                aria-expanded="False">Профиль</a>
                     <div class="dropdown-menu">
                     <a class="dropdown-item" href="{% url 'board:profile' %}">Мои объявления</a>
                     <a class="dropdown-item" href="{% url 'board:profile_change' %}">Изменить личные данные</a>
@@ -61,7 +61,7 @@
             </div>
         </div>
     </nav>
-    </div>
+
     <section class="col border py-2">
             {% bootstrap_messages %}
             <h2>Добавить объявление</h2>
