fixed modals in detail.html

--- a/board/templates/board/about.html
+++ b/board/templates/board/about.html
@@ -1,5 +1,7 @@
 {% extends 'layout/basic_2.html' %}
 {% block title %}О сайте{% endblock %}
 {% block content %}
-<p>Информация о сайте</p>
+<h4>Информация о сайте</h4>
+Cайт для размещения объявлений о продаже.
+
 {% endblock %}
