--- a/board/templates/board/author_detail.html
+++ b/board/templates/board/author_detail.html
@@ -1,14 +1,37 @@
 {% extends "layout/basic_2.html" %}
+{% load static %}
 {% block title %}{{ author.name }}{% endblock %}
 {% block content %}
-<p>Пользователь: {{ author.username }}</p>
+<h6>Пользователь: {{ author.username }}</h6>
 <p>Адрес электронной почты: {{ author.email }}</p>
+<p>Контактный телефон: {{author.phone_number}}</p>
 <h4 class="text-center">Все объявления пользователя</h4>
 {% for b in bb %}
-<div class="container-fluid w-50 rounded bg-secondary">
-<a href="{% url 'board:detail' b.category.slug b.slug %}">
-    <p class="text-center">{{b.title}}</p>
-    <p class="text-center">{{b.price}}</p>
-</a></div>
+    <div class="shadow p-3 mb-5 rounded bg-secondary">
+    <h5>{{b.title}}</h5>
+    <p>Описание: {{b.content}}</p>
+    <p>Стоимость: {{b.price}} руб.</p>
+     {% if b.image %}
+    <div class="container mt-1">
+      <div class="btn"  data-toggle="modal" data-target=".bd-example-modal-lg">
+          <img src="{{ b.image.url }}" class="additional-image rounded">
+            <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+                 aria-labelledby="myLargeModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+                  <img src="{{ b.image.url }}" class="main-image">
+                </div>
+              </div>
+            </div>
+        </div>
+        <hr>
+        </div>
+
+      {% else %}
+        <img src="{% static 'board/not found.jpeg' %}" class="additional-image rounded">
+        <hr>
+    {% endif %}
+    </div>
+
 {% endfor %}
 {% endblock %}
